--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
