--- a/package.json
+++ b/package.json
@@ -10,16 +10,25 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mdb-react-ui-kit": "^8.0.0",
+    "mongoose": "^8.5.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.24.0",
+    "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
